--- a/simplerss.css
+++ b/simplerss.css
@@ -1,5 +1,8 @@
-/*
+/* simplerss
+ * Simple RSS viewer.
  *
+ * (c) Karl-Martin Skontorp <kms@skontorp.net> ~ http://picofarad.org/
+ * Licensed under the GNU GPL 2.0 or later.
  */
 
 /* General */
